--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "type": "project",
     "require": {
         "php": "^8.3",
-        "neutomic/neutomic": "dev-main",
+        "neutomic/neutomic": "dev-main#d3a488d29e54bb3a732b337de82d24244aa17a6d",
         "twig/twig": "^4.0"
     },
     "license": "MIT",
