--- a/config/framework.yaml
+++ b/config/framework.yaml
@@ -2,4 +2,4 @@ framework:
     middleware:
         static-content:
             roots:
-                '/': '%project%/public'
+                '/': '%project.directory%/public'
